crates/swc_ecma_parser/tests/test262-error-references/fail/7624feb2a003e001.js.stderr
error: Invalid character in identifier
 --> $DIR/tests/test262-parser/fail/7624feb2a003e001.js:1:1
  |
1 | \uD800
  | ^^^^^^

